DT-1645 fixes wrapping ecom basket quantity button

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -559,6 +559,9 @@ button.btn,
 	}
 }
 
+.basket-summary-quantitybtn {
+	min-width: 90px;
+}
 .basket-summary-quantitybtn button {
 	cursor: pointer;
 	height: 20px;
